design: 랜덤문제 풀기 생성

--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -1,5 +1,5 @@
 <div th:fragment="content(question, mcq)"
-     class="card w-80 bg-base-100 shadow-xl">
+     class="card w-80 bg-base-100 shadow-xl mt-5">
 
     <div class="card-body">
         <p class="py-6" th:text="${question.content}"></p>
