--- a/src/main/resources/templates/usr/question/fragment/detail/title.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/title.html
@@ -1,5 +1,5 @@
 <div th:fragment="title(question)"
-     class="card w-80 bg-base-100 shadow-xl mt-5">
+     class="card w-80 bg-base-100 shadow-xl">
 
 
     <div class="card-body">
