--- a/src/main/resources/templates/usr/question/top/play.html
+++ b/src/main/resources/templates/usr/question/top/play.html
@@ -2,9 +2,9 @@
 
 <head><title>랜덤 문제 풀기</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col justify-center items-center bg-base-200">
+<div layout:fragment="content" class="min-h-screen flex justify-center items-start bg-base-200">
 
-  <div th:replace="~{usr/question/fragment/play/stack :: stack(${questions})}"></div>
+  <div th:replace="~{usr/question/fragment/play/stack :: stack(${questions}, ${mcq})}"></div>
 
 </div>
 </html>
