fix: 문제풀기 설정에서 빈 카테고리 노출되는 문제 해결

--- a/src/main/resources/templates/usr/question/fragment/function/form.html
+++ b/src/main/resources/templates/usr/question/fragment/function/form.html
@@ -14,7 +14,8 @@
 
             <div class="form-control"
                  th:each="category : ${categories}"
-                 th:object="${category}">
+                 th:object="${category}"
+                 th:if="${category.questions.size > 0}">
 
                 <label class="label cursor-pointer">
                     <span class="label-text" th:text="*{name}"></span>
