--- a/src/main/resources/templates/usr/question/top/play.html
+++ b/src/main/resources/templates/usr/question/top/play.html
@@ -5,6 +5,7 @@
 <div layout:fragment="content" class="min-h-screen flex justify-center items-start bg-base-200">
 
   <div th:replace="~{usr/question/fragment/play/stack :: stack(${questions}, ${mcq})}"></div>
+  <div th:replace="~{usr/question/fragment/play/nav :: nav}"></div>
 
 </div>
 </html>
