design: 랜덤 문제 ui 업데이트

--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -1,10 +1,10 @@
 <div th:fragment="nav"
-     class="mb-12 flex flex-col mt-5 mb-12">
+     class="mb-12 flex flex-col mt-12 mb-12">
 
 
   <div class="flex justify-center gap-5">
 
-    <a th:href="@{/question/list/{id}(id=${question.category.id})}">
+    <a href="/">
       <i class="fa-solid fa-chevron-left"></i></a>
 
     <span><i class="fa-solid fa-highlighter"></i></span>
