--- a/src/main/resources/templates/usr/question/fragment/play/stack.html
+++ b/src/main/resources/templates/usr/question/fragment/play/stack.html
@@ -5,7 +5,7 @@
 
         <div th:each="question, roop : ${questions}"
              th:object="${question}"
-             class="text-center border border-base-content card w-36 bg-base-100">
+             class="text-center border border-base-content card w-36 min-h-full bg-base-100">
 
             <div th:replace="~{usr/question/fragment/play/card :: card(${question}, ${mcq})}"></div>
         </div>
