feat: 생성된 랜덤문제 세션에 저장 성공 / 지연로딩 문제 발생

--- a/src/main/resources/templates/usr/question/fragment/function/form.html
+++ b/src/main/resources/templates/usr/question/fragment/function/form.html
@@ -1,5 +1,5 @@
 <form th:fragment="form(createFunctionForm, categories, types, difficulties)"
-      action="/question/play" method="get"
+      action="/question/playlist" method="get"
       th:object="${createFunctionForm}"
       class="flex flex-col w-80 gap-4 mt-5 mb-12"
       onsubmit="JoinForm__submit(this); return false;">
