--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -1,15 +1,17 @@
-<div th:fragment="nav"
-     class="mb-12 flex flex-col mt-12 mb-12">
+<div th:fragment="nav(question)"
+     class="mb-12 flex flex-col pt-5 border-t-[1px] mb-8 ">
 
 
   <div class="flex justify-center gap-5">
 
-    <a href="/">
+    <a href="#">
       <i class="fa-solid fa-chevron-left"></i></a>
 
-    <span><i class="fa-solid fa-highlighter"></i></span>
+    <a><i class="fa-solid fa-highlighter"></i></a>
 
-    <span><i class="fa-regular fa-comment"></i></span>
+    <a><i class="fa-regular fa-comment"></i></a>
+
+    <a><i class="fa-solid fa-chevron-right"></i></a>
   </div>
 
 </div>
