--- a/src/main/resources/templates/usr/question/fragment/play/stack.html
+++ b/src/main/resources/templates/usr/question/fragment/play/stack.html
@@ -1,5 +1,5 @@
 <div th:fragment="stack(questions, mcq)"
-     class="min-h-full mt-5">
+     class="min-h-full mt-5 mb-12">
 
     <div class="stack">
 
@@ -8,6 +8,7 @@
              class="text-center border border-base-content card w-36 min-h-full bg-base-100">
 
             <div th:replace="~{usr/question/fragment/play/card :: card(${question}, ${mcq})}"></div>
+            <div th:replace="~{usr/question/fragment/play/nav :: nav(${question})}"></div>
         </div>
 
     </div>
