--- a/src/main/resources/templates/usr/question/top/play.html
+++ b/src/main/resources/templates/usr/question/top/play.html
@@ -5,7 +5,6 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center pb-12 bg-base-200">
 
   <div th:replace="~{usr/question/fragment/play/stack :: stack(${questions}, ${mcq})}"></div>
-  <div th:replace="~{usr/question/fragment/play/nav :: nav}"></div>
-
+  <div class="mb-12 pb-12"/>
 </div>
 </html>
