design: 문제 풀기 ui update

--- a/src/main/resources/templates/usr/question/fragment/function/form.html
+++ b/src/main/resources/templates/usr/question/fragment/function/form.html
@@ -33,5 +33,5 @@
     <div th:replace="~{usr/question/fragment/function/difficulty :: difficulty(${createFunctionForm}, ${difficulties})}"></div>
     <div th:replace="~{usr/question/fragment/function/count :: count(${createFunctionForm})}"></div>
 
-    <button class="btn btn-primary mt-3 mb-12">문제풀기 시작</button>
+    <button class="btn btn-primary mt-3 mb-12">설정 완료</button>
 </form>
