--- a/src/main/resources/templates/usr/question/top/play.html
+++ b/src/main/resources/templates/usr/question/top/play.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>랜덤 문제 풀기</title></head>
+<head><title>문제 플레이</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center pb-12 bg-base-200">
 
