--- a/src/main/resources/templates/usr/question/fragment/playlist/check.html
+++ b/src/main/resources/templates/usr/question/fragment/playlist/check.html
@@ -1,11 +1,21 @@
-<div th:fragment="check(questions, createFunctionForm)"
-     class="card w-96 bg-base-100 shadow-xl">
+<div th:fragment="check(createFunctionForm)"
+     th:object="${createFunctionForm}"
+     class="card w-80 bg-base-100 shadow-xl mt-5">
 
     <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-            <a class="btn btn-primary"
+        <h2 class="card-title" th:text="|총 *{count} 문제|"></h2>
+
+        <div class="flex flex-col gap-3 mt-5">
+            <div>문제 타입</div>
+            <div class="flex gap-3">
+                <span th:each="type : *{type}"
+                      class="badge" th:text="${type}"></span>
+            </div>
+        </div>
+
+
+        <div class="card-actions justify-center mt-5">
+            <a class="btn btn-primary w-40"
                th:href="@{/question/play}">Play!</a>
         </div>
     </div>
