--- a/src/main/resources/templates/usr/question/top/playlist.html
+++ b/src/main/resources/templates/usr/question/top/playlist.html
@@ -1,10 +1,19 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>카드 문제 플레이</title></head>
+<head><title>문제 플레이</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12 bg-base-200">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200">
 
-    <div th:replace="~{usr/question/fragment/playlist/check :: check(${questions}, ${createFunctionForm})}"></div>
+    <div th:replace="~{usr/question/fragment/playlist/check :: check(${createFunctionForm})}"></div>
+
+    <button onclick="goBack()">다시 설정하기 <i class="fa-solid fa-chevron-left"></i></button>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+
 
 </div>
 </html>
