랜덤문제 기능 구현 / 이전문제, 다음문제 이동 기능은 아직 구현 안함 (#32)
* fix: member import 삭제

* feat: Question query dsl 적용

* question, category 객체 생성 service 구현

* test: category 생성 로직 검증 완료

* test: 주관식 문제 생성 검증완료

* teat: question 객관식 문제 생성 검증 완료

* rebase 완료

* design: html layout 구현

* feat: category 생성 완료 / HTML 까지 완료

* feat: category list 페이지 구현 완료

* design: 네비바 레이아웃 변경

* design: 네비바 레이아웃 변경 완료

* feat: BaseEntity 생성

* feat: category, question, tag, choice, underline 에 BaseEntity 상속

* remove: 태그, 선택지 관련 코드 삭제 / 연관관계 매핑 형식으로 변경할 예정

* feat: choice, tag 생성, 수정 entity 완료

* feat: question service 생성 로직 구현, 테스트 완료

* feat: question 생성 구현 / 문제 타입 아직 반영 안됬음

* feat: category init data 추가

* design: 카테고리 리스트 어드민 에게만 카테고리 생성 버튼 활성화

* feat: 카테고리별 문제 목록 구현 완료

* feat: 카테고리별 문제 목록 구현 완료

* feat: 객관식 주관식 타입적용 완료 / init data 추가

* feat: 문제 상세페이지 생성

* fix: member 이넘타입 검증 안되는 문제 해결

* design: 난이도 ui 업데이트

* fix: 난이도 제대로 안나오는 문제 해결

* feat: 문제 상세페이지 생성

* design: 문제 상세페이지에 댓글, 밑줄긋기 버튼 추가

* design: 문제 상페 뒤로가기 ui 업데이트

* design: 문제 상세페이지 생성

* chore: 오타수정

* feat: 문제풀기 설정 폼 생성

* design: 카테고리 체크박스 생성

* design: 카테고리 체크박스 매핑 성공

* feat: 난이도 제외 문제 풀기 설정 맵핑 성공

* feat: 문제 생성폼의 모든 필드 매핑 성공

* feat: 문제 풀기 폼 검증 로직 구현 완료

* refactor: 문제 풀기 설정 html 코드  리팩토링

* feat: 조건에 맞는 랜덤 문제 조회 로직 구현

* fix: init data 가 test 에서도 작동되는 문제 확인

* test: 조건에 맞는 랜덤 문제 조회 테스트 완료

* design: 랜덤문제 풀기 생성

* design: 랜덤 문제 ui 업데이트

* fix: 문제풀기 설정에서 빈 카테고리 노출되는 문제 해결

* design: 랜덤 문제 ui 업데이트

* feat: 생성된 랜덤문제 세션에 저장 성공 / 지연로딩 문제 발생

* feat: 지연로딩 문제를 해결하기 위해 랜덤 문제 생성시 id 필드만 조회 / test 성공

* feat: 최근 실행한 랜덤문제 세션에 저장하면서 풀기 성공

* design: 문제 풀기 ui update

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -6,7 +6,8 @@
     <a>
         <i class="fa-regular fa-comments"></i>
     </a>
-    <a class="active">
+    <a class="active"
+       th:href="@{/question/function}">
         <i class="fa-regular fa-circle-play"></i>
     </a>
     <a th:href="@{/category/list}">
