design: 프로필 이미지 디자인

--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -9,3 +9,16 @@ html > body {
     font-family: "GmarketSansMedium";
     text-underline-position: under;
 }
+
+.profile-img-box {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 30%;
+    overflow: hidden;
+}
+
+.profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
