--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -25,8 +25,8 @@
                             <i class="fa-brands fa-instagram"></i>
                             프로필 이미지
                         </div>
-                        <div class="mt-2" th:if="${@rq.member.profileImg != null}">
-                            <img th:src="@{/images/profile/{filename}(filename=${@rq.member.profileImg})}">
+                        <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null}">
+                            <img class="profile-img" th:src="@{/images/profile/{filename}(filename=${@rq.member.profileImg})}">
                         </div>
                         <div class="mt-2" th:if="${@rq.member.profileImg == null}">
                             <img src="/images/profile/no-image.png">
