--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -93,5 +93,21 @@
   dynamicContentElement.href = pageLink;
 </script>
 
+<script>
+  // 파일 선택 시 이미지 미리보기
+  document.getElementById('profileImg').addEventListener('change', function(e) {
+    var file = e.target.files[0];
+
+    if (file) {
+      var reader = new FileReader();
+
+      reader.onload = function(e) {
+        document.getElementById('previewImage').src = e.target.result;
+      };
+
+      reader.readAsDataURL(file);
+    }
+  });
+</script>
 </body>
 </html>
