--- a/src/main/resources/templates/usr/member/update.html
+++ b/src/main/resources/templates/usr/member/update.html
@@ -11,6 +11,10 @@
             <input type="file" id="profileImg" name="filename" required />
             <button type="submit" class="btn btn-default">업로드</button>
         </form>
+        <!-- 이미지 미리보기 -->
+        <div class="profile-img-box">
+            <img class="profile-img" id="previewImage" src="/images/profile/no-image.png" alt="Image Preview">
+        </div>
     </div>
 
 </div>
