--- a/src/main/resources/templates/usr/member/update.html
+++ b/src/main/resources/templates/usr/member/update.html
@@ -7,14 +7,21 @@
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div>
         <form th:action method="post" enctype="multipart/form-data" autocomplete="off" class="flex flex-col">
-            <label for="profileImg">프로필 사진 바꾸기</label>
-            <input type="file" id="profileImg" name="filename" required />
-            <button type="submit" class="btn btn-default">업로드</button>
+            <!-- 이미지 미리보기 -->
+            <div class="flex justify-center">
+                <div class="profile-img-box mb-5">
+                    <img class="profile-img" id="previewImage" src="/images/profile/no-image.png" alt="Image Preview">
+                </div>
+            </div>
+            <div class="flex flex-col mb-5">
+                <label class="badge mb-2" for="profileImg">프로필 이미지 변경</label>
+                <input type="file" id="profileImg" name="filename" placeholder="변경할 이미지를 선택해주세요." required />
+            </div>
+            <div class="flex flex-col mb-5">
+                <input class="input input-bordered w-full max-w-xs" type="text" id="nickname" name="nickname" placeholder="변경할 닉네임을 적어주세요." required />
+            </div>
+            <button type="submit" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">변경하기</button>
         </form>
-        <!-- 이미지 미리보기 -->
-        <div class="profile-img-box">
-            <img class="profile-img" id="previewImage" src="/images/profile/no-image.png" alt="Image Preview">
-        </div>
     </div>
 
 </div>
