fix: playlist 생성을 건너뛰고 접근하는 클라이언트 돌려보내는 기능 추가

--- a/src/main/resources/templates/usr/question/fragment/create/form.html
+++ b/src/main/resources/templates/usr/question/fragment/create/form.html
@@ -40,7 +40,7 @@
            th:field="*{name}"
            placeholder="제목"/>
 
-    <textarea class="textarea textarea-bordered"
+    <textarea class="textarea textarea-bordered h-40"
               th:field="*{content}"
               placeholder="문제"></textarea>
 
