--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -2,19 +2,22 @@
      class="mb-12 flex flex-col justify-end pt-5 border-t-[1px] mb-8 ">
 
 
-  <div class="flex justify-center gap-5">
+    <div th:replace="~{usr/question/fragment/play/valid :: valid}"></div>
+    <div class="flex justify-center gap-5">
 
-    <a th:if="${page > 0}"
-       th:href="@{|?page=${page - 1}|}">
-      <i class="fa-solid fa-chevron-left"></i></a>
+        <a th:if="${page > 0}"
+           th:href="@{|?page=${page - 1}|}">
+            <i class="fa-solid fa-chevron-left"></i></a>
 
-    <a><i class="fa-solid fa-highlighter"></i></a>
 
-    <a><i class="fa-regular fa-comment"></i></a>
+        <span th:replace="~{usr/question/fragment/play/underline :: underline(${question}, ${page}, ${size})}"></span>
 
-    <a th:if="${page < size}"
-       th:href="@{|?page=${page + 1}|}">
-      <i class="fa-solid fa-chevron-right"></i></a>
-  </div>
+
+        <a><i class="fa-regular fa-comment"></i></a>
+
+        <a th:if="${page < size}"
+           th:href="@{|?page=${page + 1}|}">
+            <i class="fa-solid fa-chevron-right"></i></a>
+    </div>
 
 </div>
