--- a/src/main/resources/templates/usr/member/update.html
+++ b/src/main/resources/templates/usr/member/update.html
@@ -19,6 +19,7 @@
                 <input type="file" id="profileImg" name="filename" placeholder="변경할 이미지를 선택해주세요." />
             </div>
             <div class="flex flex-col mb-5">
+                <label class="badge mb-2" for="nickname">닉네임 변경</label>
                 <input class="input input-bordered w-full max-w-xs" type="text" th:value="${@rq.member.nickname}" id="nickname" name="nickname" placeholder="변경할 닉네임을 적어주세요." required />
             </div>
             <button type="submit" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">변경하기</button>
