--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -10,7 +10,7 @@
         <a th:href="@{/question/list/{id}(id=${question.category.id})}">
             <i class="fa-solid fa-chevron-left"></i></a>
 
-        <span><i class="fa-solid fa-highlighter"></i></span>
+        <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question})}"></span>
 
         <span><i class="fa-regular fa-comment"></i></span>
     </div>
