design: 메인페이지 광고 샘플 구현

--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -4,7 +4,7 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
-    <!-- 이곳에 로직을 구현해주시면 됩니다 -->
+    <div th:replace="~{usr/home/fragment/index/ad :: ad}"></div>
 
 </div>
 </html>
