--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -1,10 +1,12 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>메인</title></head>
+<head><title>in hub</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-8 bg-base-300">
 
     <div th:replace="~{usr/home/fragment/index/ad :: ad}"></div>
+    <div th:replace="~{usr/home/fragment/index/note :: note}"></div>
+
 
 </div>
 </html>
