--- a/src/main/resources/templates/usr/question/fragment/play/content.html
+++ b/src/main/resources/templates/usr/question/fragment/play/content.html
@@ -8,10 +8,11 @@
          class="form-control">
         <label class="label cursor-pointer">
             <span class="label-text" th:text="|${roop.count}.  ${choice.choice}|"></span>
-            <input type="radio" name="radio-10" class="radio checked:bg-red-500" checked/>
+            <input type="radio" name="mcq" class="radio checked:bg-red-500" checked/>
         </label>
     </div>
 
-    <textarea th:if="${question.type ne mcq}"
+    <textarea th:if="${question.type ne mcq}" name="saq"
               class="textarea textarea-bordered w-full h-40 mt-3" placeholder="답변 입력"></textarea>
+
 </div>
