feat: list.html 작업

--- a/src/main/resources/templates/usr/community/create.html
+++ b/src/main/resources/templates/usr/community/create.html
@@ -18,7 +18,7 @@
                             <label class="label">
                                 <span class="label-text">게시판 제목</span>
                             </label>
-                            <input th:field="${createCommunityForm.title}" type="text" placeholder="title" class="input input-bordered" />
+                            <input th:field="${createCommunityForm.title}" type="text" placeholder="" class="input input-bordered" />
                         </div>
                         <div class="form-control mt-6">
                             <button type="submit" class="btn btn-primary">생성</button>
