--- a/src/main/resources/templates/usr/community/list.html
+++ b/src/main/resources/templates/usr/community/list.html
@@ -1,28 +1,23 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
-
 <head>
-    <title>게시판 목록</title>
+    <title>in hub</title>
 </head>
-
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
+    <h1 class="text-2xl font-bold mb-4">커뮤니티</h1>
 
-    <h1>게시판 목록</h1>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Content</th>
-        </tr>
-        <!-- 게시판 목록 반복 출력 -->
-        <tr th:each="community : ${communities}">
-            <td th:text="${community.id}"></td>
-            <td th:text="${community.title}"></td>
-            <td th:text="${community.content}"></td>
-        </tr>
-    </table>
-    <!-- 로그인한 회원 정보 출력 -->
-    <p th:text="'현재 로그인한 회원: ' + ${member.username}"></p>
+    <div class="tabs flex justify-between w-full">
+        <div class="tab">
+            <input type="radio" name="tab" id="tab1" class="hidden" checked>
+            <label for="tab1" class="tab-label font-semibold">자유게시판</label>
+            <div class="tab-content">
 
+            </div>
+        </div>
+        <!-- 새로운 게시판 추가 기능 -->
+        <a href="/community/create" class="btn btn-primary">게시판 추가</a>
+                </form>
+            </div>
+        </div>
 </div>
-
+</div>
 </html>
