feat: 랜덤문제에서 입력한 정답 요청하는 로직 구현 완료 (#43)
* feat: 랜덤 문제에서 다음페이지로 이동할 때 답변 저장 method 로 요청 보내는 기능 구현

* feat: 랜덤문제에서 입력한 정답 요청하는 로직 구현 완료

--- a/src/main/resources/templates/usr/question/fragment/play/valid.html
+++ b/src/main/resources/templates/usr/question/fragment/play/valid.html
@@ -1,16 +1,14 @@
 <script th:fragment="valid">
-  function JoinForm__submit(form) {
+  function CreateForm__submit(form) {
 
-    //-- name 검증 --//
-    form.about.value = form.about.value.trim();
+      form.content.value = form.content.value.trim();
 
-    if (form.about.value.length > 50) {
-      toastWarning('너무 길어요.');
-      form.about.focus();
-      return;
-    }
+      if (form.content.value.length > 500) {
+          toastWarning('답변이 너무 길어요');
+          form.content.focus();
+          return;
+      }
 
-    //-- 폼 발송 --//
-    form.submit();
+      form.submit();
   }
 </script>
