--- a/src/main/resources/templates/usr/question/fragment/play/content.html
+++ b/src/main/resources/templates/usr/question/fragment/play/content.html
@@ -1,17 +1,29 @@
-<div th:fragment="content(question, mcq)"
+<div th:fragment="content(question, createAnswerForm, mcq, page, size)"
+     th:object="${createAnswerForm}"
      class="mt-5 border-t-[1px]">
 
     <p class="py-6" th:text="${question.content}"></p>
 
-    <div th:if="${question.type eq mcq}"
-         th:each="choice, roop : ${question.choiceList}"
-         class="form-control">
-        <label class="label cursor-pointer">
-            <span class="label-text" th:text="|${roop.count}.  ${choice.choice}|"></span>
-            <input type="radio" name="radio-10" class="radio checked:bg-red-500" checked/>
-        </label>
-    </div>
+    <script th:replace="~{usr/question/fragment/play/valid :: valid}"></script>
 
-    <textarea th:if="${question.type ne mcq}"
-              class="textarea textarea-bordered w-full h-40 mt-3" placeholder="답변 입력"></textarea>
+    <form th:action="@{/question/answer(id=${question.id}, page=${page + 1})}"
+          method="post"
+          onsubmit="CreateForm__submit(this); return false;">
+
+        <div th:if="${question.type eq mcq}"
+             th:each="choice, roop : ${question.choiceList}"
+             class="form-control">
+
+            <label class="label cursor-pointer">
+                <span class="label-text" th:text="|${choice.number + 1}.  ${choice.choice}|"></span>
+                <input type="radio" th:field="*{content}" th:value="${choice.number}" class="radio checked:bg-red-500"/>
+            </label>
+        </div>
+
+
+        <textarea th:if="${question.type ne mcq}" th:field="*{content}"
+                  class="textarea textarea-bordered w-full h-40 mt-3 mb-3" placeholder="답변 입력"></textarea>
+
+        <div th:replace="~{usr/question/fragment/play/nav :: nav(${question}, ${page}, ${size})}"></div>
+    </form>
 </div>
