--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -1,8 +1,7 @@
 <div th:fragment="nav(question, page, size)"
-     class="mb-12 flex flex-col justify-end pt-5 border-t-[1px] mb-8 ">
+     class="flex flex-col justify-end pt-5 border-t-[1px] mt-3">
 
 
-    <div th:replace="~{usr/question/fragment/play/valid :: valid}"></div>
     <div class="flex justify-center gap-5">
 
         <a th:if="${page > 0}"
@@ -13,9 +12,10 @@
         <span th:replace="~{usr/question/fragment/play/underline :: underline(${question}, ${page}, ${size})}"></span>
 
 
-        <a th:if="${page < size}"
-           th:href="@{|?page=${page + 1}|}">
-            <i class="fa-solid fa-chevron-right"></i></a>
+        <button>
+            <i class="fa-solid fa-chevron-right"></i>
+        </button>
+
 
         <a th:if="${page eq size}"
            th:href="@{/question/submit}">
