design: mcq -> 객관식 / saq -> 주관식 으로 ui 변경

--- a/src/main/resources/templates/usr/home/fragment/index/note.html
+++ b/src/main/resources/templates/usr/home/fragment/index/note.html
@@ -1,4 +1,4 @@
-<div th:fragment="note" class="flex flex-col gap-7">
+<div th:fragment="note" class="flex flex-col gap-7 mb-12">
 
     <div class="card w-80 bg-base-100 shadow-xl">
 
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="card w-80 bg-base-100 shadow-xl">
+    <div class="card w-80 bg-base-100 shadow-xl mb-12">
 
         <figure>
             <img src="/images/note/002.png"/>
