--- a/src/main/resources/templates/usr/question/fragment/detail/underline.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/underline.html
@@ -1,4 +1,5 @@
-<span th:fragment="underline(question)">
+<span th:fragment="underline(question)"
+      th:if="${@rq.login}">
     <label for="my-modal-6"><i class="fa-solid fa-highlighter"></i></label>
 
     <input type="checkbox" id="my-modal-6" class="modal-toggle" />
