--- a/src/main/resources/templates/usr/question/fragment/list/table.html
+++ b/src/main/resources/templates/usr/question/fragment/list/table.html
@@ -1,4 +1,4 @@
-<table th:fragment="table(category)"
+<table th:fragment="table(category, mcq)"
        class="mt-5 table w-full">
 
   <thead>
@@ -25,7 +25,7 @@
       </a>
     </td>
     <td>
-      <a th:text="*{type}"
+      <a th:text="(*{type} == ${mcq})? '객관식':'주관식'"
          th:href="@{/question/detail/{id}(id=*{id})}"></a>
     </td>
   </tr>
