--- a/src/main/resources/templates/usr/question/top/function.html
+++ b/src/main/resources/templates/usr/question/top/function.html
@@ -5,7 +5,7 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12 bg-base-200">
 
     <div th:replace="~{usr/question/fragment/function/valid :: valid}"></div>
-    <form th:replace="~{usr/question/fragment/function/form :: form(${createFunctionForm}, ${categories}, ${types}, ${difficulties})}"></form>
+    <form th:replace="~{usr/question/fragment/function/form :: form(${createFunctionForm}, ${categories}, ${types}, ${difficulties}, ${mcq})}"></form>
 
 </div>
 </html>
