--- a/src/main/resources/templates/usr/question/top/list.html
+++ b/src/main/resources/templates/usr/question/top/list.html
@@ -4,7 +4,7 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col gap-12">
 
-    <form th:replace="~{usr/question/fragment/list/table :: table(${category})}"></form>
+    <form th:replace="~{usr/question/fragment/list/table :: table(${category}, ${mcq})}"></form>
 
     <div th:if="${@rq.login}"
          class="flex justify-end">
