--- a/src/main/resources/templates/usr/question/top/playlist.html
+++ b/src/main/resources/templates/usr/question/top/playlist.html
@@ -4,7 +4,7 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200">
 
-    <div th:replace="~{usr/question/fragment/playlist/check :: check(${createFunctionForm})}"></div>
+    <div th:replace="~{usr/question/fragment/playlist/check :: check(${createFunctionForm}, ${mcq})}"></div>
 
     <button onclick="goBack()">다시 설정하기 <i class="fa-solid fa-chevron-left"></i></button>
 
