--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -9,7 +9,7 @@
             <i class="fa-solid fa-chevron-left"></i></a>
 
 
-        <span th:replace="~{usr/question/fragment/play/underline :: underline(${question}, ${page}, ${size})}"></span>
+        <label for="my-modal-6"><i class="fa-solid fa-highlighter"></i></label>
 
 
         <button>
