docs: readme 추가

--- a/src/main/resources/templates/usr/home/fragment/index/note.html
+++ b/src/main/resources/templates/usr/home/fragment/index/note.html
@@ -9,7 +9,7 @@
         <div class="card-body">
 
             <h2 class="card-title">
-                취업 뉴스
+                오늘의 취업 뉴스
                 <div class="badge badge-secondary">NEW</div>
             </h2>
 
@@ -31,7 +31,7 @@
         <div class="card-body">
 
             <h2 class="card-title">
-                Shoes!
+                이것도 풀어볼래?!
                 <div class="badge badge-secondary">NEW</div>
             </h2>
 
