--- a/src/main/resources/templates/layout/top-navbar.html
+++ b/src/main/resources/templates/layout/top-navbar.html
@@ -21,6 +21,9 @@
                     <a href="javascript:" onclick="$(this).next().submit();">로그아웃</a>
                     <form class="!hidden" hidden th:action="|/member/logout|" method="POST"></form>
                 </li>
+                <li th:if="${@rq.login && @rq.member.role.toString() == 'ADMIN'}">
+                    <a href="/member/members">전체회원관리</a>
+                </li>
             </ul>
 
         </div>
