design: 자잘한 ui 업데이트 (#45)
* design: mcq -> 객관식 / saq -> 주관식 으로 ui 변경

* feat: 문제 풀기 다음페이지버튼 url 변경

* fix: 문제 푸는중 밑줄긋기 안되는 문제 해결

* feat: init data question 작성 시 정답도 등록되도록 수정

* fix: 문제 생성시 타입 선택 안되는문제 해결

* feat: 태그 저장 방식 변경

* design: 문제 생성시 타입 선택 창 ui 업데이트

* docs: readme 추가

--- a/src/main/resources/templates/usr/home/fragment/index/note.html
+++ b/src/main/resources/templates/usr/home/fragment/index/note.html
@@ -1,4 +1,4 @@
-<div th:fragment="note" class="flex flex-col gap-7">
+<div th:fragment="note" class="flex flex-col gap-7 mb-12">
 
     <div class="card w-80 bg-base-100 shadow-xl">
 
@@ -9,7 +9,7 @@
         <div class="card-body">
 
             <h2 class="card-title">
-                취업 뉴스
+                오늘의 취업 뉴스
                 <div class="badge badge-secondary">NEW</div>
             </h2>
 
@@ -31,7 +31,7 @@
         <div class="card-body">
 
             <h2 class="card-title">
-                Shoes!
+                이것도 풀어볼래?!
                 <div class="badge badge-secondary">NEW</div>
             </h2>
 
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="card w-80 bg-base-100 shadow-xl">
+    <div class="card w-80 bg-base-100 shadow-xl mb-12">
 
         <figure>
             <img src="/images/note/002.png"/>
