--- a/src/main/resources/templates/usr/question/fragment/play/content.html
+++ b/src/main/resources/templates/usr/question/fragment/play/content.html
@@ -6,7 +6,7 @@
 
     <script th:replace="~{usr/question/fragment/play/valid :: valid}"></script>
 
-    <form th:action="@{/question/answer(id=${question.id}, page=${page + 1})}"
+    <form th:action="@{/answer/quiz/create(id=${question.id}, page=${page + 1})}"
           method="post"
           onsubmit="CreateForm__submit(this); return false;">
 
@@ -26,4 +26,6 @@
 
         <div th:replace="~{usr/question/fragment/play/nav :: nav(${question}, ${page}, ${size})}"></div>
     </form>
+
+    <span th:replace="~{usr/question/fragment/play/underline :: underline(${question}, ${page}, ${size})}"></span>
 </div>
